# jrag

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_REQUIREMENTS.md  LICENSE  README.md  absence_diagnosis.py  absence_types.py  absence_vocab.py  ast_java.py  brownfield_events.py  build_ast_graph.py  graph_enrich.py  graph_types.py  java_index_flow_lancedb.py  java_index_v1_common.py  java_ontology.py  kuzu_queries.py  ladybug_queries.py  mcp.json.example  mcp_hints.py  mcp_trace.py  mcp_v2.py  path_filtering.py  pr_analysis.py  propose_only_automation.py  pyproject.toml  pytest.ini  refresh_decision.py  requirements-indexer.txt  requirements.txt  resolve_service.py  search_lancedb.py  search_lexical.py  search_scoring.py  server.py  vocab_index.json
.claude/: settings.json
.github/: CODEOWNERS
agents/: explorer-rag-cli.md  explorer-rag-enhanced.md  java-codebase-rag-explorer.md  java-codebase-rag.md
bench/: PHASE0_FINDINGS.md  PREREGISTRATION.md  README.md  __init__.py  checkout_corpora.py  claude_runner.py  conditions.yml  corpora.yml  grade.py  load_conditions.py  load_corpora.py  load_questions.py  report.py  run_bench.py
docs/: AGENT-GUIDE.md  ARCHITECTURE.md  CODEBASE_REQUIREMENTS.md  CONFIGURATION.md  CURSOR-PROPOSE-ONLY-AUTOMATION.md  DESIGN.md  EDGE-NAVIGATION.md  JAVA-CODEBASE-RAG-CLI.md  JRAG-CLI.md  MANUAL-VERIFICATION-CHECKLIST.md  MIGRATION.md  PRODUCT-VISION.md  PROPOSES-ORDER.md  USER-RAG-CLI.md
java_codebase_rag/: _fdlimit.py  _stdio.py  _version.py  cli.py  cli_format.py  cli_progress.py  config.py  installer.py  jrag.py  jrag_envelope.py  jrag_hints.py  jrag_render.py  lance_optimize.py  pipeline.py  progress.py
mcp_chromadb_bundle/: README.md  java_index_flow_chroma.py  mcp.json.example  requirements.txt  search_chroma.py  server.py
mcp_lancedb_bundle/: .gitignore  CHANGELOG.md  CODEBASE_REQUIREMENTS.md  README.md  ast_graph_rag_java.md  ast_java.py  build_ast_graph.py  chunk_heuristics.py  graph_enrich.py  java_index_flow_lancedb.py  java_index_v1_common.py  kuzu_queries.py  mcp.json.example  requirements.txt  search_lancedb.py  server.py  test-report.md
mcp_pgvector_bundle/: README.md  java_index_flow_postgres.py  mcp.json.example  requirements.txt  search_postgres.py  server.py
mcp_sqlite_bundle/: README.md  index_common.py  index_flow_common.py  java_index_flow_sqlite.py  mcp.json.example  requirements.txt  search_sqlite.py  server.py  sqlite3_ext_shim.py
plans/: AGENT-PROMPTS-HINTS-STRUCTURED.md  AGENT-PROMPTS-INIT-INCREMENT-PERF.md  CURSOR-PROMPTS-AGENT-GUIDE-SURGICAL-PATCHES.md  CURSOR-PROMPTS-CALLS-NOISE.md  CURSOR-PROMPTS-CLI-SCENARIOS.md  CURSOR-PROMPTS-DESCRIBE-HINTS-STRUCTURAL.md  CURSOR-PROMPTS-EXPLORATION-SKILL.md  CURSOR-PROMPTS-HINTS-MCP-CALL-SHAPE.md  CURSOR-PROMPTS-HINTS-V2.md  CURSOR-PROMPTS-HINTS-V3.md  CURSOR-PROMPTS-HINTS-V4.md  CURSOR-PROMPTS-HINTS.md  CURSOR-PROMPTS-LIST-CLIENTS-MCP-TOOL.md  CURSOR-PROMPTS-LOSSLESS-PERMISSIVE-NODEFILTER.md  CURSOR-PROMPTS-MCP-API-V2.md  CURSOR-PROMPTS-MCP-FILTER-FRAME.md  CURSOR-PROMPTS-NEIGHBORS-DOT-KEY-TRAVERSAL.md  CURSOR-PROMPTS-OVERRIDDEN-BY-DOT-KEY-TRAVERSAL.md  CURSOR-PROMPTS-RESOLVE-TOOL.md  CURSOR-PROMPTS-SCHEMA-V2.md  CURSOR-PROMPTS-TIER1.md  CURSOR-PROMPTS-TIER1B.md  PLAN-AGENT-GUIDE-SURGICAL-PATCHES.md  PLAN-CALL-GRAPH.md  PLAN-CALLS-NOISE.md  PLAN-CLI-PROGRESS-OUTPUT.md  PLAN-CLI-SCENARIOS.md  PLAN-CLIENT-ROLE-RENAME.md  PLAN-CROSS-SERVICE-RESOLUTION-FLAG.md  PLAN-DESCRIBE-HINTS-STRUCTURAL.md  PLAN-DESCRIBE-MEMBER-EDGE-ROLLUP.md  PLAN-DESCRIBE-OVERRIDE-ROLLUP.md  PLAN-EXPLORATION-SKILL.md  PLAN-FEIGN-NOT-AN-EXPOSER.md  PLAN-HINTS-MCP-CALL-SHAPE.md  PLAN-HINTS-STRING-REMOVAL.md  PLAN-HINTS-STRUCTURED.md  PLAN-HINTS-V2.md  PLAN-HINTS-V3.md  PLAN-HINTS-V4.md  (+16 more)
propose/: AGENT-GUIDE-SURGICAL-PATCHES-PROPOSE.md  AGENT-SKILLS-AND-COMMANDS-PROPOSE.md  BROWNFIELD-ANNOTATIONS-V2-PROPOSE.md  CALL-GRAPH-PROPOSE.md  CALLS-NOISE-AND-RESOLUTION-PROPOSE.md  CLAUDE-CODE-PARITY-PROPOSE.md  CLI-PROGRESS-OUTPUT-PROPOSE.md  CLI-SCENARIOS-PROPOSE.md  CLIENT-ROLE-RENAME-PROPOSE.md  DESCRIBE-HINTS-STRUCTURAL-PROPOSE.md  DESCRIBE-MEMBER-EDGE-ROLLUP-PROPOSE.md  DESCRIBE-OVERRIDE-ROLLUP-PROPOSE.md  EXPLORATION-SKILL-PROPOSE.md  FEIGN-NOT-AN-EXPOSER-PROPOSE.md  HINTS-MCP-CALL-SHAPE-PROPOSE.md  HINTS-MCP-JSON-IDS-PROPOSE.md  HINTS-ROAD-SIGNS-PROPOSE.md  HINTS-STRING-REMOVAL-PROPOSE.md  HINTS-STRUCTURED-PROPOSE.md  HINTS-V2-PROPOSE.md  HINTS-V3-PROPOSE.md  HINTS-V4-SUCCESS-PATH-PROPOSE.md  HTTP-ROUTE-METHOD-ENUM-PROPOSE.md  INDEX-AUTO-MODE-PROPOSE.md  JRAG-CLI-PROPOSE.md  LIST-CLIENTS-MCP-TOOL-PROPOSE.md  LOSSLESS-PERMISSIVE-NODEFILTER-PROPOSE.md  MCP-API-V2-REDESIGN-PROPOSE.md  MCP-FILTER-FRAME-PROPOSE.md  NEIGHBORS-DOT-KEY-TRAVERSAL-PROPOSE.md  OVERRIDDEN-BY-DOT-KEY-TRAVERSAL-PROPOSE.md  PRODUCT-VISION.md  REFRESH-CODE-INDEX-AUTO-MODE-PROPOSE.md  REPROCESS-SPLIT-PROPOSE.md  RESOLVE-TOOL-PROPOSE.md  SCHEMA-V2-PROPOSE.md  SHARED-MODULE-MULTI-ATTRIBUTION-PROPOSE.md  TEST-SUITE-FAST-LOOP-PROPOSE.md  TIER1-COMPLETION-PROPOSE.md  TIER1B-HTTP-ASYNC-EDGES-PROPOSE.md  (+3 more)
reports/: call-graph-review.md  what-to-borrow-from-cmm.md
scripts/: build-explore-skill.sh  check_dist_version.py  generate_edge_navigation.py  propose_only_orchestrator.py  sync_agent_artifacts.py
shim/: README.md  pyproject.toml
skills/: README.md
tests/: README.md  _builders.py  conftest.py  pinned_ids.py  pytest.ini  test_absence_diagnosis.py  test_absence_mcp_integration.py  test_absence_types.py  test_absence_vocab.py  test_agent_skills_static.py  test_assign_endpoint_client_extraction.py  test_ast_graph_build.py  test_ast_java_calls.py  test_ast_java_capabilities.py  test_ast_java_thread_safety.py  test_ast_kotlin.py  test_bank_chat_brownfield_integration.py  test_brownfield_clients.py  test_brownfield_events.py  test_brownfield_overrides.py  test_brownfield_routes.py  test_call_edge_matching.py  test_call_edges_e2e.py  test_call_graph_receiver_resolution.py  test_call_graph_smoke_roundtrip.py  test_call_invariant.py  test_cli_increment.py  test_cli_progress_stdout_invariant.py  test_cli_quiet_parity.py  (+74 more)
(+1021 files in other folders)
