[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "java-codebase-rag"
version = "0.6.7"
description = "MCP server for semantic + structural search over Java codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "HumanBean17" },
]
keywords = ["mcp", "java", "rag", "code-search", "graph", "lancedb", "ladybug"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "cocoindex[lancedb]>=1.0.7,<2",
    "ladybug>=0.17.1,<0.18",
    "lancedb>=0.25.3,<0.31",
    "mcp>=1.27.0,<2",
    "numpy>=1.26.4,<2.5",
    "pathspec>=1.0.4,<2",
    "pyarrow>=23.0.1,<24",
    "pydantic>=2.0,<3",
    "PyYAML>=6.0.3,<7",
    "questionary>=2.0,<3",
    "rich>=14,<15",
    "sentence-transformers>=5.4.0,<6",
    "tree-sitter>=0.25.2,<0.26",
    "tree-sitter-java>=0.23.5,<0.24",
    "unidiff>=0.7.3,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/HumanBean17/java-codebase-rag"
Repository = "https://github.com/HumanBean17/java-codebase-rag"
Issues = "https://github.com/HumanBean17/java-codebase-rag/issues"

[project.scripts]
java-codebase-rag = "java_codebase_rag.cli:_console_script_main"
java-codebase-rag-mcp = "server:main"

[tool.setuptools]
packages = ["java_codebase_rag"]
py-modules = [
    "ast_java",
    "brownfield_events",
    "build_ast_graph",
    "chunk_heuristics",
    "graph_enrich",
    "graph_types",
    "index_common",
    "java_index_flow_lancedb",
    "java_index_v1_common",
    "java_ontology",
    "ladybug_queries",
    "mcp_hints",
    "mcp_v2",
    "path_filtering",
    "pr_analysis",
    "resolve_service",
    "search_lancedb",
    "server",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.package-data]
"java_codebase_rag" = ["install_data/skills/**/*", "install_data/agents/**/*"]
