[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jrag-cli"
version = "0.12.0"
description = "jrag (formerly java-codebase-rag) — MCP server + jrag CLI for semantic + structural search over Java/Kotlin codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "HumanBean17" },
]
keywords = ["jrag", "java", "mcp", "rag", "code-search", "graph", "lancedb", "ladybug"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
# The vector/semantic-search trio (cocoindex[lancedb], lancedb, sentence-transformers
# -> torch) is gated off on Intel Mac (darwin + x86_64): torch >=2.3 and lancedb >=0.26
# dropped macOS x86_64 wheels, so the full stack is uninstallable there. On Intel Mac the
# package installs graph-only and works out of the box — `search` then falls back to the
# lexical (keyword) backend over the symbol graph (search_lexical.py); every other platform
# is unchanged.
dependencies = [
    "cocoindex[lancedb]>=1.0.15,<2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "ladybug>=0.17.1,<0.18",
    "lancedb>=0.34,<0.36; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "mcp>=1.27.0,<2",
    "numpy>=1.26.4,<2.5",
    "pathspec>=1.0.4,<2",
    "pyarrow>=23.0.1,<26",
    "pydantic>=2.0,<3",
    "PyYAML>=6.0.3,<7",
    "questionary>=2.0,<3",
    "rich>=14,<16",
    "sentence-transformers>=5.4.0,<6; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "tree-sitter>=0.25.2,<0.26",
    "tree-sitter-java>=0.23.5,<0.24",
    "tree-sitter-kotlin>=1.1.0,<2",
    "unidiff>=0.7.3,<1",
    "watchdog>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3",
    "ruff>=0.4",
]
bench = [
    # Optional: only needed for bench/report.py PNG plots. report.py degrades
    # gracefully (tables + CSV only) when matplotlib is absent.
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/HumanBean17/jrag"
Repository = "https://github.com/HumanBean17/jrag"
Issues = "https://github.com/HumanBean17/jrag/issues"

[project.scripts]
jrag = "java_codebase_rag.cli_dispatch:_console_script_main"
jrag-mcp = "java_codebase_rag.mcp.server:main"
java-codebase-rag = "java_codebase_rag.cli_dispatch:_console_script_main"
java-codebase-rag-mcp = "java_codebase_rag.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.package-data]
"java_codebase_rag" = ["install_data/skills/**/*", "install_data/agents/**/*"]
